# squads

./: .gitattributes  .gitignore  .squads.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SQUADS-FEEDBACK.md  pyproject.toml  scratchpad_rev_body.md
.claude/agents/: architect.md  devops.md  manager.md  product-owner.md  python-dev.md  qa.md  reviewer.md  tech-lead.md  tech-writer.md  typescript-dev.md
.github/workflows/: publish.yml  release.yml  test.yml  vscode-client.yml
clients/vscode/: .gitignore  .prettierignore  .vscodeignore  MARKETPLACE.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.canary.config.ts  vitest.config.ts
docs/: README.md  adoption.md  agents.md  backends.md  faq.md  internals.md  migration.md  overrides.md  recipes.md  roles.md  stability.md  tutorial.md  workflow.md
scripts/: gen_template_manifest.py
squads/: .gitignore  .squads.json
squads/adrs/: ADR-000049-ref-kind-vocabulary-is-closed-in-1-0-with-the-extension-poin.md  ADR-000071-frontmatter-is-the-source-of-truth-the-index-is-rebuildable.md  ADR-000072-one-global-monotonic-id-counter-across-all-item-types.md  ADR-000073-forward-only-refs-with-computed-backrefs.md  ADR-000074-marker-safe-editing-sq-owns-the-anchor-regions-agents-own-th.md  ADR-000075-pluggable-backends-behind-the-agentbackend-abc-claude-is-poi.md  ADR-000076-dotted-0-x-schema-version-scheme-with-the-sq-migrate-runner.md  ADR-000077-time-is-injectable-through-a-single-clock-module.md  ADR-000078-module-privacy-convention-underscore-prefixed-internals-no-r.md  ADR-000085-project-level-overrides-live-under-overrides-with-per-file-p.md  ADR-000104-the-index-may-hold-corpus-derived-format-parameters-carried.md  ADR-000114-removal-is-a-hard-delete-the-reflog-is-its-audit-trace.md  ADR-000117-reflog-durability-append-atomicity-and-actor-threading.md  ADR-000129-python-3-14-floor-pep-649-lazy-annotations-vs-installable-au.md  ADR-000133-de-claude-ify-the-agentbackend-abc-before-the-1-0-freeze.md  ADR-000141-multi-active-agent-backends-active-backends-list-fan-out-and.md  ADR-000141-multi-active-agent-backends-active-backends-list-fan-out-mig.md  ADR-000143-bug-lifecycle-workflow-and-set-time-status-validation-agains.md  ADR-000149-post-1-0-schema-version-scheme-dotted-string-tracking-the-in.md  ADR-000153-async-core-conversion-anyio-locking-and-the-single-bridge-ru.md  ADR-000155-capability-attenuation-leaf-roles-cannot-spawn-enforced-at-t.md  ADR-000158-agent-identity-spawn-lineage-best-effort-untrusted-lineage-o.md  ADR-000163-advisory-create-lane-enforcement-slice-b.md  ADR-000167-advisory-120-char-threshold-for-sub-entity-titles.md  ADR-000179-parameterized-item-file-storage-prefix-scope-vs-layout-and-t.md  ADR-000180-format-neutral-item-file-storage-contract-codec-seam-named-b.md  ADR-000181-skills-as-first-class-entities-full-item-of-type-skill-on-th.md  ADR-000214-workflow-spec-bundled-toml-schema-loader-enums-intact-defaul.md  ADR-000221-role-catalog-spec-bundled-roles-toml-loader-golden-locked-en.md  ADR-000226-playbook-spec-bundled-playbook-toml-loader-slug-validated-sk.md  ADR-000232-de-type-item-to-str-spec-validated-vocabulary-typespec-capab.md  ADR-000249-workflow-spec-as-a-threaded-context-object-kill-the-process.md  ADR-000263-registering-a-custom-type-s-top-level-cli-command-ahead-of-c.md  ADR-000266-spec-derived-per-type-vocabulary-retire-the-static-prefix-fo.md  ADR-000274-f6-scope-split-custom-sub-entity-kinds-rename-migrations-int.md  ADR-000282-decouple-display-padding-unpadded-ids-from-filename-padding.md  ADR-000295-sq-renumber-pre-merge-block-shift-cli-boundary-disjointness.md  ADR-000314-storage-id-model-for-agent-memory-and-the-team-bulletin-boar.md  ADR-000320-introduce-the-contract-prd-item-type-the-living-functional-c.md  ADR-000322-remove-the-itemtype-and-status-enums-the-spec-is-the-sole-vo.md  (+14 more)
squads/board/: 1bfa57493f.md  3994a9f06f.md  5d51655dfd.md  f1c139d69e.md  ff564acf5d.md
squads/bugs/: BUG-000011-sq-check-flags-operator-authors-assignees-as-unregistered.md  BUG-000021-slug-arguments-not-validated-sq-mine-accepts-unknown-agents.md  BUG-000022-counter-can-regress-allowing-sequence-number-reuse-after-an.md  BUG-000025-show-prints-a-redundant-body-literal-before-the-body.md  BUG-000030-tree-priority-and-title-separated-by-a-bare-space.md  BUG-000056-comment-text-containing-literal-sq-marker-syntax-breaks-the.md  BUG-000080-inbox-surfaces-stale-mentions-from-accepted-decisions-and-pu.md  BUG-000120-retype-does-not-log-to-reflog-feat-000024-gap.md  BUG-000134-agents-md-managed-section-missing-workflow-commands-and-skil.md  BUG-000142-orphan-bug-statuses-sq-status-validates-against-enum-not-wor.md  BUG-000151-windows-ci-override-path-separators-template-hash-crlf-and-i.md  BUG-000152-spawned-dev-subagent-self-spawns-recursively-cascade-up-to-6.md  BUG-000183-sq-json-emits-ansi-and-breaks-json-parsing-when-force-color.md  BUG-000213-package-version-duplicated-in-pyproject-and-init-bumps-half.md  BUG-000272-sq-bug-skill-playbook-advertise-the-wrong-bug-lifecycle-stri.md  (+21 more)
squads/epics/: EPIC-000012-road-to-1-0.md  (+14 more)
tests/: CONVENTIONS.md  COVERAGE_LEDGER.md  _helpers.py  conftest.py  test_adoption.py  test_agent_naming.py  test_aliases.py  test_backend_agents_md.py  test_backend_claude.py  test_backend_conformance.py  test_bug_severity_migration.py  test_bug_workflow.py  test_can_spawn.py  test_cli.py  test_cli_help_vocab.py  test_collab.py  test_custom_badge_axis.py  test_custom_status_badges.py  test_custom_status_flow.py  test_custom_subentity_kind_cli.py  test_custom_type_cli.py  test_custom_type_create.py  test_custom_type_paths.py  test_custom_type_skill.py  test_discussion.py  test_docfiles.py  test_golden_json.py  test_golden_rendered_output.py  test_graph.py  test_index.py  test_json_no_ansi.py  test_lane_derivation.py  test_linearize_lifecycle.py  test_load_boundary_vocab.py  test_meta_compat.py  test_migration_corpus.py  test_migrations.py  test_models.py  test_multi_active_backends.py  test_operators.py  (+45 more)
(+1234 files in other folders)
