[project]
name = "squads"
version = "0.7.0"
description = "The coordination layer for a team of AI agents working on one codebase: stable JIRA-like IDs, roles & skills, a status lifecycle, and handoffs in predictable markdown."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pierre Chat", email = "pierrechat@outlook.com" },
    { name = "Claude", email = "noreply@anthropic.com" },
]
keywords = ["ai", "agents", "claude", "cli", "project-management", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "filelock>=3.13",
    "rich>=13.7",
    "pyyaml>=6.0",
    "anyio>=4",
]

[project.scripts]
squads = "squads._cli:main"
sq = "squads._cli:main"

[project.urls]
Homepage = "https://github.com/TheCaptainCat/squads"
Repository = "https://github.com/TheCaptainCat/squads"
Issues = "https://github.com/TheCaptainCat/squads/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "anyio[trio]>=4.14.0",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squads"]

# Ship the repo-root docs inside the wheel as squads/_docs/ so `sq docs` can print them
# offline (no fetch). Editable installs don't materialize this — _docfiles falls back to docs/.
[tool.hatch.build.targets.wheel.force-include]
"docs" = "squads/_docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
anyio_mode = "auto"
markers = [
    "slow: marks tests that generate large data sets or have wall-clock bounds (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "W",          # base
    "C901",                                  # cyclomatic complexity
    "SIM", "PERF", "PTH", "RUF",             # smells / perf / pathlib / ruff
    "TRY",                                   # exception hygiene
    "PLR0911", "PLR0912", "PLR0913", "PLR0915",  # too many returns/branches/args/statements
    "ASYNC",                                 # blocking calls inside async fns
]
ignore = [
    "TRY003",  # long messages in raise() are intentional (user-facing SquadsError text)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
# Typer relies on function calls (Option/Argument) as parameter defaults.
"src/squads/_cli/*" = ["B008"]
# tests favour readability over these rules
"tests/*" = ["PLR2004", "PLR0913", "S101"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# pytest injects fixtures by parameter name, so their types are not statically
# inferable: strict's "unknown type" family is pure noise on tests. Silence only
# that family for the tests subtree; every other strict check still applies.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "none"

# vulture is a periodic, non-gating dead-code scan (see CLAUDE.md) — not part of
# the pyright/ruff commit gate. Known false-positive *categories* are suppressed
# declaratively here (no whitelist .py file — TOML patterns only):
#   - ignore_decorators: every Typer command/callback shape used under `_cli/`
#     (every sub-typer names its attribute `.command`/`.callback`, only the object
#     varies: `app`, `item`, `sub`, `_addr`, `dev_app`, `role_app`, ... — a wildcard
#     on the attribute alone is enough) plus pydantic's method-level hooks, which
#     are entry points Typer/pydantic call by registration, not by a visible call
#     site vulture's AST scan can see.
#   - ignore_names: identifiers vulture can never see used, because the call site
#     is a runtime `getattr(obj, f"...")` dispatch rather than a static reference
#     (pydantic's `model_config`, read by the metaclass; the kind-generic
#     sub-entity methods dispatched from `_cli/_items.py`'s
#     `list_sub`/`s_show`/`s_body` — `list_{plural}`, `get_{kind}`,
#     `set_{kind}_body`). Deliberately NOT pattern-based wildcards (e.g. `get_*`)
#     since that would also mask genuinely-dead `get_`-shaped functions.
#   Deliberately NOT suppressed: the `Status` enum members (read by value from
#   spec/frontmatter data or exercised only in tests/, which vulture doesn't scan).
#   The `Status` enum is slated for removal, so don't hardcode its member names
#   here now — that would be dead config almost immediately. A run before that
#   removal lands will show that expected noise; a later hygiene sweep will clean
#   up (or add fresh suppressions) once the vocabulary has settled.
[tool.vulture]
paths = ["src/squads"]
min_confidence = 60
ignore_decorators = [
    "@*.command",
    "@*.callback",
    "@field_validator",
    "@model_validator",
    "@computed_field",
]
ignore_names = [
    # pydantic ConfigDict class attribute — consumed by the metaclass, not by name.
    "model_config",
    # Service methods reached only via getattr(service, f"...") dynamic dispatch
    # from _cli/_items.py (list_sub / s_show / s_body).
    "list_stories",
    "list_subtasks",
    "list_findings",
    "get_subtask",
    "get_story",
    "get_finding",
    "set_subtask_body",
    "set_story_body",
    "set_finding_body",
]
