[project]
name = "squads"
version = "0.11.0"
description = "The coordination layer for a team of AI agents working on one codebase: stable JIRA-like IDs, roles & skills, a status lifecycle, and handoffs in predictable markdown."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pierre Chat", email = "pierrechat@outlook.com" },
    { name = "Claude", email = "noreply@anthropic.com" },
]
keywords = ["ai", "agents", "claude", "cli", "project-management", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "filelock>=3.13",
    "rich>=13.7",
    "pyyaml>=6.0",
    "anyio>=4",
]

[project.scripts]
squads = "squads._cli:main"
sq = "squads._cli:main"

[project.urls]
Homepage = "https://github.com/TheCaptainCat/squads"
Repository = "https://github.com/TheCaptainCat/squads"
Issues = "https://github.com/TheCaptainCat/squads/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "anyio[trio]>=4.14.0",
    "vulture>=2.16",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squads"]

# Ship the repo-root docs inside the wheel as squads/_docs/ so `sq docs` can print them
# offline (no fetch). Editable installs don't materialize this — _docfiles falls back to docs/.
[tool.hatch.build.targets.wheel.force-include]
"docs" = "squads/_docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` (pytest-xdist): parallel by default, local + CI; `-n0` forces serial (not `-p no:xdist`,
# which unloads the plugin but leaves `-n auto` in addopts, so it errors as an unrecognized arg).
addopts = "-q -n auto"
anyio_mode = "auto"
markers = [
    "slow: marks tests that generate large data sets or have wall-clock bounds (skipped by default, opt in with --run-slow)",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]
# clients/ is a self-contained TypeScript/Node package (ADR-427 #1) with its own gate;
# a stray .ts/node_modules there must never fail a Python run.
extend-exclude = ["clients"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "W",          # base
    "C901",                                  # cyclomatic complexity
    "SIM", "PERF", "PTH", "RUF",             # smells / perf / pathlib / ruff
    "TRY",                                   # exception hygiene
    "PLR0911", "PLR0912", "PLR0913", "PLR0915",  # too many returns/branches/args/statements
    "ASYNC",                                 # blocking calls inside async fns
    "ERA",                                   # commented-out code
]
ignore = [
    "TRY003",  # long messages in raise() are intentional (user-facing SquadsError text)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
# Typer relies on function calls (Option/Argument) as parameter defaults.
"src/squads/_cli/*" = ["B008"]
# tests favour readability over these rules; ERA001 false-positives heavily on our
# section-divider comments ("# Label: word", "# Label (word)") and the verbatim-quoted
# docstring text in the backend-conformance findings catalogue
"tests/*" = ["PLR2004", "PLR0913", "S101", "ERA001"]

[tool.pyright]
include = ["src", "tests"]
# Belt-and-suspenders alongside `include` above: clients/ is a self-contained TypeScript/Node
# package (ADR-427 #1) with its own gate; a stray .ts/node_modules there must never fail pyright.
exclude = ["clients"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# pytest injects fixtures by parameter name, so their types are not statically
# inferable: strict's "unknown type" family is pure noise on tests. Silence only
# that family for the tests subtree; every other strict check still applies.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "none"

# vulture: periodic, non-gating dead-code scan (see CLAUDE.md). Suppresses framework
# false-positive categories only — Typer/pydantic decorators, plus test-only public
# API vulture can't see because it scans src/squads only. No `get_*`-style wildcards
# (would mask real dead code).
[tool.vulture]
paths = ["src/squads"]
min_confidence = 60
ignore_decorators = [
    "@*.command",
    "@*.callback",
    "@field_validator",
    "@model_validator",
    "@computed_field",
]
ignore_names = [
    # pydantic ConfigDict class attribute — consumed by the metaclass, not by name.
    "model_config",
    # Typer reads these off the dynamically-built generic sub-entity command
    # functions (_cli/_items.py's add-<kind>/update builders) at runtime.
    "__signature__",
    "__doc__",
    # Per-kind sub-entity service wrappers (thin delegators over the generic
    # add_block/list_blocks/get_block/update_block/set_block_body/set_block_status
    # surface) — the CLI dispatches generically now, so these are test-only public
    # service API, kept as delegators for their existing test call sites.
    "add_story",
    "add_subtask",
    "add_finding",
    "list_stories",
    "list_subtasks",
    "list_findings",
    "get_subtask",
    "get_story",
    "set_subtask_body",
    "set_story_body",
    "set_subtask_status",
    "set_story_status",
    "set_subtask_done",
    "set_subtask_assignee",
    "update_subtask",
    "update_finding",
]
